fix width of topNav bar on small res displays

--- a/app/Resources/themes/ideacontest/SpoutletBundle/public/css/containers.css
+++ b/app/Resources/themes/ideacontest/SpoutletBundle/public/css/containers.css
@@ -41,7 +41,8 @@
     border-bottom: 1px solid #ccc;
 }
 #topNav-content {
-    width: 1050px;
+    width: 100%;
+    max-width: 1050px;
     margin: 0 auto;
 }
 #topNav ul {
